<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/item"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:weightSum="10"

    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/item_image"
        android:layout_width="61dp"
        android:layout_height="match_parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/item_name"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/item_image"
        android:gravity="left"
        android:text="@string/name"
        android:textSize="25sp"
        android:layout_weight="5"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="0dp"
        android:layout_toEndOf="@+id/item_name"
        android:gravity="center|left"
        android:textSize="25sp"
        android:text="@string/rate_label"
        android:layout_weight="4"/>

    <TextView
        android:id="@+id/textViewRateInSearch"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center|left"
        android:textSize="25dp"
        android:text="@string/rate_default" />


</LinearLayout>